# next-gen

./: .gitignore  README.md  pyproject.toml
docs/: design.md  execution-order-and-scoping.md  hook_plan.md  hooks-improvement-proposals.md  roadmap.md
examples/: conditional_demo.yaml  db_demo.yaml  export_demo.yaml  fail_fast_demo.yaml  full_demo.json  full_demo.yaml  hook_demo.yaml  hooks.py  matrix_demo.yaml  parallel_demo.yaml  retry_demo.yaml  retry_test.yaml  set_vars_demo.yaml  timeout_demo.yaml  timeout_test.yaml
examples/advanced/: README.md  conditional.yaml  db_sqlite.yaml  failure_and_retry.yaml  hooks.py  hooks.yaml  hooks_extra.py  http_assertions.yaml  json_case.json  matrix.yaml  tags.yaml  timeout_failure.yaml  upload.yaml
examples/guide/: 01_first_test.yaml  02_variables_and_extract.yaml  README.md  notes.yaml  suite.yaml
nextgen/: __init__.py  bootstrap.py  cli.py
nextgen/actions/: __init__.py
nextgen/core/: actions.py  assertion.py  condition.py  context.py  discovery.py  dry_run.py  errors.py  extract.py  files.py  filtering.py  hooks.py  model.py  operators.py  planner.py  protocol.py  result.py  scheduler.py  suite.py
nextgen/parser/: env_loader.py  loader.py
nextgen/reporter/: __init__.py  base.py  json_reporter.py  junit_reporter.py
tests/: test_cli.py  test_public_api.py
tests/actions/: test_db.py  test_http.py
tests/core/: test_assertion.py  test_condition.py  test_context.py  test_discovery.py  test_dry_run.py  test_errors.py  test_extract.py  test_filtering.py  test_hooks.py  test_model.py  test_operators.py  test_suite.py  (+2 more)
(+42 files in other folders)
