[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextgen"
version = "0.1.0"
description = "Next-Gen API Test Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "jsonpath-ng>=1.6",
    "typer>=0.12",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[project.scripts]
nextgen = "nextgen.cli:app"
